* FEA#9462 Module creation