@@ -1,1 +1,2 @@
+* FEA#9462 Correction des tests globaux
 * FEA#9462 Création du module
