@@ -1,1 +1,2 @@
+* FEA#9462 Global test correction
 * FEA#9462 Module creation
